--- a/css/styles.css
+++ b/css/styles.css
@@ -6,16 +6,20 @@ body {
 
 h1 {
   font-size: 5.625rem;
-  margin-top: 0;
+  margin: 50px auto 0 auto;
   font-family: 'Sacramento', cursive;
+  color: #009DAE;
 }
 
 h2 {
   font-size: 2.5rem;
   font-family: 'Montserrat', sans-serif;
+  color: #009DAE;
+  font-weight: normal;
 }
 
 h3 {
+  color: #11999E;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -31,6 +35,35 @@ h3 {
 
 .bottom-container {
   background-color: #009DAE;
+}
+
+.skill-row {
+  width: 50%;
+  margin: 50px auto 50px auto;
+  text-align: left;
+  line-height: 2;
+}
+
+.icon-stack {
+  width: 100px;
+  height: 100px;
+  float: left;
+  margin-right: 30px;
+}
+
+.icon-network {
+  width: 100px;
+  height: 100px;
+  float: right;
+  margin-left: 30px;
+}
+
+.skill-description-stack {
+  clear: left;
+}
+
+.skill-description-network {
+  clear: right;
 }
 
 .pro {
